SeatSelectController 修改完畢