@@ -5,15 +5,16 @@ import com.maddog.articket.activity.service.pri.ActivityService;
 import com.maddog.articket.activityareaprice.entity.ActivityAreaPrice;
 import com.maddog.articket.activityareaprice.service.impl.ActivityAreaPriceService;
 import com.maddog.articket.activitytimeslot.entity.ActivityTimeSlot;
-import com.maddog.articket.activitytimeslot.service.impl.ActivityTimeSlotService;
-import com.maddog.articket.seat.model.service.impl.SeatService;
+import com.maddog.articket.activitytimeslot.service.pri.ActivityTimeSlotService;
+import com.maddog.articket.seat.model.service.pri.SeatService;
 import com.maddog.articket.seatstatus.entity.SeatStatus;
 import com.maddog.articket.seatstatus.service.impl.SeatStatusService;
 import com.maddog.articket.ticket.entity.Ticket;
 import com.maddog.articket.venuearea.service.impl.VenueAreaService;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
-import org.springframework.ui.ModelMap;
+import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -22,11 +23,11 @@ import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 import jakarta.servlet.http.HttpSession;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
+@Slf4j
 @Controller
 @RequestMapping("/seatSelect")
 public class SeatSelectController {
@@ -50,31 +51,28 @@ public class SeatSelectController {
 	private ActivityAreaPriceService activityAreaPriceService;
 
 	@GetMapping
-	public String getSeatSelect(@RequestParam("activityTimeSlot") Integer activityTimeSlotId,ModelMap model) {
-		// @RequestParam("activityTimeSlotId") Integer activityTimeSlotId, ModelMap
-		// model//到時候需要加入這參數
-//		Integer activityTimeSlotId = 30;
+	public String getSeatSelect(@RequestParam("activityTimeSlot") Integer activityTimeSlotId, Model model) {
 		ActivityTimeSlot activityTimeSlot = activityTimeSlotService.getActivityTimeSlotById(activityTimeSlotId);
-        Integer activityId = activityTimeSlot.getActivity().getActivityID();
+        Integer activityId = activityTimeSlot.getActivityId();
         Activity activity = activityService.getOneActivity(activityId);
-        Integer venueId = activity.getVenue().getVenueID();
+        Integer venueId = activity.getVenueId();
 		
 		String venueAreaName1 = "VIP";
 		Integer venueAreaId1 = venueAreaService.findVenueAreaIdByVenueIdAndVenueAreaName(venueId, venueAreaName1);
-		System.out.println("venueAreaId1================================="+venueAreaId1);
-		System.out.println("activityId================================="+activityId);
+		log.info("venueAreaId1================================={}", venueAreaId1);
+		log.info("activityId================================={}", activityId);
 		ActivityAreaPrice activityAreaPrice1 = activityAreaPriceService.findActivityAreaPrice(venueAreaId1, activityId);
 		
 		String venueAreaName2 = "A";
 		Integer venueAreaId2 = venueAreaService.findVenueAreaIdByVenueIdAndVenueAreaName(venueId, venueAreaName2);
-		System.out.println("venueAreaId2================================="+venueAreaId2);
-		System.out.println("activityId================================="+activityId);
+		log.info("venueAreaId2================================={}", venueAreaId2);
+		log.info("activityId================================={}", activityId);
 		ActivityAreaPrice activityAreaPrice2 = activityAreaPriceService.findActivityAreaPrice(venueAreaId2, activityId);
 		
 		String venueAreaName3 = "B";
 		Integer venueAreaId3 = venueAreaService.findVenueAreaIdByVenueIdAndVenueAreaName(venueId, venueAreaName3);
-		System.out.println("venueAreaId3========================================="+venueAreaId3);
-		System.out.println("activityId========================================="+activityId);
+		log.info("venueAreaId3========================================={}", venueAreaId3);
+		log.info("activityId========================================={}", activityId);
 		ActivityAreaPrice activityAreaPrice3 = activityAreaPriceService.findActivityAreaPrice(venueAreaId3, activityId);
 		
 		model.addAttribute("activityTimeSlot", activityTimeSlot);
@@ -88,76 +86,77 @@ public class SeatSelectController {
 		List<SeatStatus> seatStatuses = seatStatusService.getAllSeatStatusByActivityTimeSlotID(activityTimeSlotId);
 		model.addAttribute("seatStatuses", seatStatuses);
 		
-		
 		// 將不可用的座位添加到模型中
 		List<String> unavailableSeats = seatStatusService.getUnavailableSeatNames(activityTimeSlotId);
         model.addAttribute("unavailableSeats", unavailableSeats);
-		//測試用，看能不能讓前端抓到
-//		List<String> unavailableSeats = Arrays.asList("VIP15", "A23", "A211", "B61", "B62");
-//      model.addAttribute("unavailableSeats", unavailableSeats);
 
 		return "/front-end/ticket/seatSelect";
 	}
 
 	@PostMapping("/submitSeats")
-	public String submitSeats(@RequestParam Integer activityTimeSlotID, @RequestParam String seat1,
-			@RequestParam(required = false) String seat2, @RequestParam(required = false) String seat3,
-			@RequestParam(required = false) String seat4, @RequestParam(required = false) String seat5,
-			HttpSession session, RedirectAttributes redirectAttributes) {
-		List<String> seatNames = Arrays.asList(seat1, seat2, seat3, seat4, seat5).stream().filter(Objects::nonNull)
-				.filter(seat -> !seat.trim().isEmpty()).collect(Collectors.toList());
+	public String submitSeats(@RequestParam Integer activityTimeSlotId,
+							  @RequestParam String seat1,
+							  @RequestParam(required = false) String seat2,
+							  @RequestParam(required = false) String seat3,
+							  @RequestParam(required = false) String seat4,
+							  @RequestParam(required = false) String seat5,
+							  HttpSession session,
+							  RedirectAttributes redirectAttributes) {
+
+		List<String> seatNames = Stream.of(seat1, seat2, seat3, seat4, seat5)
+									.filter(Objects::nonNull)
+									.filter(seat -> !seat.isBlank())
+									.toList();
 
 		List<Ticket> ticketList = new ArrayList<>();
-		ActivityTimeSlot activityTimeSlot = activityTimeSlotService.getActivityTimeSlotById(activityTimeSlotID);
-		Integer activityId = activityTimeSlot.getActivity().getActivityID();// 活動ID從活動時段ID抓取
+		ActivityTimeSlot activityTimeSlot = activityTimeSlotService.getActivityTimeSlotById(activityTimeSlotId);
+		Integer activityId = activityTimeSlot.getActivityId();// 活動ID從活動時段ID抓取
 		Activity activity = activityService.getOneActivity(activityId);
-		activity.setActivityID(activityId);
-		Integer venueId = activity.getVenue().getVenueID();// 場館ID從活動ID抓取
+		activity.setActivityId(activityId);
+		Integer venueId = activity.getVenueId();// 場館ID從活動ID抓取
 
 		try {
-			System.out.println("處理座位選擇開始");
+			log.info("處理座位選擇開始");
 			for (String seatName : seatNames) {
-				System.out.println("正在處理座位: " + seatName);
+				log.info("正在處理座位: {}", seatName);
 
 				// 解析座位名稱，分離出區域名稱和座位號碼
 				String venueAreaName = seatName.replaceAll("\\d+", "");
 
-				System.out.println("解析後的區域名稱: " + venueAreaName);
+				log.info("解析後的區域名稱: {}", venueAreaName);
 
 				// 使用 VenueAreaService 找出 venueAreaId
 				Integer venueAreaId = venueAreaService.findVenueAreaIdByVenueIdAndVenueAreaName(venueId, venueAreaName);
 				
 				
 				if (venueAreaId == null) {
-					System.out.println("未找到區域: " + venueAreaName);
+					log.info("未找到區域: {}", venueAreaName);
 					redirectAttributes.addFlashAttribute("error", "未找到區域: " + venueAreaName);
 					return "redirect:/error";
 				}
 
-				System.out.println("找到區域ID: " + venueAreaId + " 對應區域名稱: " + venueAreaName);
+				log.info("找到區域ID: {} 對應區域名稱: {}", venueAreaId, venueAreaName);
 
 				// 使用 ActivityAreaPriceService 查找 ActivityAreaPrice
 				ActivityAreaPrice activityAreaPrice = activityAreaPriceService.findActivityAreaPrice(venueAreaId,
 						activityId);
 				if (activityAreaPrice == null) {
-					System.out.println("未找到活動區域價格: 區域ID " + venueAreaId + ", 活動ID " + activityId);
+					log.info("未找到活動區域價格: 區域ID {}, 活動ID {}", venueAreaId, activityId);
 					redirectAttributes.addFlashAttribute("error", "未找到活動區域價格: " + venueAreaName);
 					return "redirect:/error";
 				}
 
-				System.out.println("找到活動區域價格ID: " + activityAreaPrice.getActivityAreaPriceID() + " 對應區域ID: "
-						+ venueAreaId + ", 活動ID: " + activityId);
+				log.info("找到活動區域價格ID: {} 對應區域ID: {}, 活動ID: {}", activityAreaPrice.getActivityAreaPriceID(), venueAreaId, activityId);
 
-				// 使用 venueId 和 seatNumber 找出 seatId
+				// 使用 venueId 和 seatName 找出 seatId
 				Integer seatId = seatService.findSeatId(venueId, seatName);
 				if (seatId != null) {
-					System.out.println("找到座位ID: " + seatId + " 對應座位名稱: " + seatName + " 在區域ID: " + venueAreaId);
+					log.info("找到座位ID: {} 對應座位名稱: {} 在區域ID: {}", seatId, seatName, venueAreaId);
 					// 使用 activityTimeSlotId 和 seatId 找出 SeatStatus
 					SeatStatus seatStatus = seatStatusService
-							.getSeatStatusByActivityTimeSlotIdAndSeatId(activityTimeSlotID, seatId);
+							.getSeatStatusByActivityTimeSlotIdAndSeatId(activityTimeSlotId, seatId);
 					if (seatStatus != null) {
-						System.out.println("找到座位狀態ID: " + seatStatus.getSeatStatusID() + " 對應座位ID: " + seatId
-								+ " 在區域ID: " + venueAreaId);
+						log.info("找到座位狀態ID: {} 對應座位ID: {} 在區域ID: {}", seatStatus.getSeatStatusID(), seatId, venueAreaId);
 
 						// Create a new Ticket object and add it to the list
 						Ticket ticket = new Ticket();
@@ -166,12 +165,12 @@ public class SeatSelectController {
 						ticket.setActivityTimeSlot(activityTimeSlot);
 						ticketList.add(ticket);
 					} else {
-						System.out.println("未找到座位狀態: " + seatName + " 在區域ID: " + venueAreaId);
+						log.info("未找到座位狀態: {} 在區域ID: {}", seatName, venueAreaId);
 						redirectAttributes.addFlashAttribute("error", "未找到座位狀態: " + seatName);
 						return "redirect:/error";
 					}
 				} else {
-					System.out.println("座位不存在: " + seatName + " 在區域ID: " + venueAreaId);
+					log.info("座位不存在: {} 在區域ID: {}", seatName, venueAreaId);
 					redirectAttributes.addFlashAttribute("error", "座位不存在: " + seatName);
 					return "redirect:/error";
 				}
@@ -180,11 +179,10 @@ public class SeatSelectController {
 			// Store the ticketList in the session
 			session.setAttribute("ticketList", ticketList);
 
-			System.out.println("所有票券資訊已存入session");
+			log.info("所有票券資訊已存入session");
 			return "redirect:/ticket/bookTicket";
 		} catch (Exception e) {
-			System.out.println("處理座位選擇時發生錯誤: " + e.getMessage());
-			e.printStackTrace();
+			log.info("處理座位選擇時發生錯誤: {}", e.getMessage());
 			redirectAttributes.addFlashAttribute("error", "處理座位選擇時發生錯誤: " + e.getMessage());
 			return "redirect:/error";
 		}
